public class DiscountService {

    private final int discount = 20;


    public double applyDiscount(double totalAmount){
        double discountAmount =0;

        // Logic

        return discountAmount;
    }


}
