public enum ParkingStatus {
    INVALID,
    SUCCESS,
    FULL
}
