public class PaymentResult {
    private final PaymentStatus paymentStatus;

    public PaymentResult(PaymentStatus paymentStatus) {
        this.paymentStatus = paymentStatus;
    }
}
