public enum SpotType {
    DISABLED,REGULAR,EV_SPOT,TRUCK
}
